LABS/Compiler/PandaQ/pandaQParser.py
# Generated from pandaQ.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pandaQParser ( Parser ):

    grammarFileName = "pandaQ.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'order by'", "'ORDER BY'", "','", 
                     "'asc'", "'desc'", "'WHERE'", "'where'", "'('", "')'", 
                     "'and'", "'or'", "'not'", "'<'", "'='", "'*'", "'+'", 
                     "'as'", "'-'", "'/'", "'^'", "'select'", "'SELECT'", 
                     "'from'", "'FROM'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID", "NUM", "INT", "FLOAT", 
                      "WS" ]

    RULE_root = 0
    RULE_query = 1
    RULE_selectQ = 2
    RULE_orderby = 3
    RULE_orderparam = 4
    RULE_where = 5
    RULE_condicions = 6
    RULE_condicio = 7
    RULE_operadorBool = 8
    RULE_camps = 9
    RULE_camp = 10
    RULE_operacio = 11
    RULE_select = 12
    RULE_from = 13
    RULE_taula = 14

    ruleNames =  [ "root", "query", "selectQ", "orderby", "orderparam", 
                   "where", "condicions", "condicio", "operadorBool", "camps", 
                   "camp", "operacio", "select", "from", "taula" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    ID=26
    NUM=27
    INT=28
    FLOAT=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.QueryContext)
            else:
                return self.getTypedRuleContext(pandaQParser.QueryContext,i)


        def getRuleIndex(self):
            return pandaQParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = pandaQParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 30
                self.query()
                self.state = 33 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==22 or _la==23):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectQ(self):
            return self.getTypedRuleContext(pandaQParser.SelectQContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_query

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = pandaQParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.selectQ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectQContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_selectQ

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SelectExprContext(SelectQContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.SelectQContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def select(self):
            return self.getTypedRuleContext(pandaQParser.SelectContext,0)

        def camps(self):
            return self.getTypedRuleContext(pandaQParser.CampsContext,0)

        def from_(self):
            return self.getTypedRuleContext(pandaQParser.FromContext,0)

        def taula(self):
            return self.getTypedRuleContext(pandaQParser.TaulaContext,0)

        def orderby(self):
            return self.getTypedRuleContext(pandaQParser.OrderbyContext,0)

        def where(self):
            return self.getTypedRuleContext(pandaQParser.WhereContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectExpr" ):
                return visitor.visitSelectExpr(self)
            else:
                return visitor.visitChildren(self)



    def selectQ(self):

        localctx = pandaQParser.SelectQContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_selectQ)
        self._la = 0 # Token type
        try:
            localctx = pandaQParser.SelectExprContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.select()
            self.state = 38
            self.camps()
            self.state = 39
            self.from_()
            self.state = 40
            self.taula()
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2 or _la==3:
                self.state = 41
                self.orderby()


            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==8:
                self.state = 44
                self.where()


            self.state = 47
            self.match(pandaQParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderbyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_orderby

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class OrderByExprContext(OrderbyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.OrderbyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def orderparam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.OrderparamContext)
            else:
                return self.getTypedRuleContext(pandaQParser.OrderparamContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrderByExpr" ):
                return visitor.visitOrderByExpr(self)
            else:
                return visitor.visitChildren(self)



    def orderby(self):

        localctx = pandaQParser.OrderbyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_orderby)
        self._la = 0 # Token type
        try:
            localctx = pandaQParser.OrderByExprContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 50
            self.orderparam()
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 51
                self.match(pandaQParser.T__3)
                self.state = 52
                self.orderparam()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderparamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_orderparam

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class OrderParamExprContext(OrderparamContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.OrderparamContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrderParamExpr" ):
                return visitor.visitOrderParamExpr(self)
            else:
                return visitor.visitChildren(self)



    def orderparam(self):

        localctx = pandaQParser.OrderparamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_orderparam)
        self._la = 0 # Token type
        try:
            localctx = pandaQParser.OrderParamExprContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(pandaQParser.ID)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5 or _la==6:
                self.state = 59
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_where

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhereExprContext(WhereContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.WhereContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicions(self):
            return self.getTypedRuleContext(pandaQParser.CondicionsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereExpr" ):
                return visitor.visitWhereExpr(self)
            else:
                return visitor.visitChildren(self)



    def where(self):

        localctx = pandaQParser.WhereContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_where)
        self._la = 0 # Token type
        try:
            localctx = pandaQParser.WhereExprContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            _la = self._input.LA(1)
            if not(_la==7 or _la==8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 63
            self.condicions()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_condicions

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondicioOrContext(CondicionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CondicionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicio(self):
            return self.getTypedRuleContext(pandaQParser.CondicioContext,0)

        def condicions(self):
            return self.getTypedRuleContext(pandaQParser.CondicionsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicioOr" ):
                return visitor.visitCondicioOr(self)
            else:
                return visitor.visitChildren(self)


    class CondicioParentesisContext(CondicionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CondicionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicions(self):
            return self.getTypedRuleContext(pandaQParser.CondicionsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicioParentesis" ):
                return visitor.visitCondicioParentesis(self)
            else:
                return visitor.visitChildren(self)


    class CondicioSingleContext(CondicionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CondicionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicio(self):
            return self.getTypedRuleContext(pandaQParser.CondicioContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicioSingle" ):
                return visitor.visitCondicioSingle(self)
            else:
                return visitor.visitChildren(self)


    class CondicioAndContext(CondicionsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CondicionsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condicio(self):
            return self.getTypedRuleContext(pandaQParser.CondicioContext,0)

        def condicions(self):
            return self.getTypedRuleContext(pandaQParser.CondicionsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicioAnd" ):
                return visitor.visitCondicioAnd(self)
            else:
                return visitor.visitChildren(self)



    def condicions(self):

        localctx = pandaQParser.CondicionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condicions)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = pandaQParser.CondicioParentesisContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.match(pandaQParser.T__8)
                self.state = 66
                self.condicions()
                self.state = 67
                self.match(pandaQParser.T__9)
                pass

            elif la_ == 2:
                localctx = pandaQParser.CondicioAndContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.condicio()
                self.state = 70
                self.match(pandaQParser.T__10)
                self.state = 71
                self.condicions()
                pass

            elif la_ == 3:
                localctx = pandaQParser.CondicioOrContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 73
                self.condicio()
                self.state = 74
                self.match(pandaQParser.T__11)
                self.state = 75
                self.condicions()
                pass

            elif la_ == 4:
                localctx = pandaQParser.CondicioSingleContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 77
                self.condicio()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_condicio

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CondicioExprContext(CondicioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CondicioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def camp(self):
            return self.getTypedRuleContext(pandaQParser.CampContext,0)

        def operadorBool(self):
            return self.getTypedRuleContext(pandaQParser.OperadorBoolContext,0)

        def operacio(self):
            return self.getTypedRuleContext(pandaQParser.OperacioContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicioExpr" ):
                return visitor.visitCondicioExpr(self)
            else:
                return visitor.visitChildren(self)



    def condicio(self):

        localctx = pandaQParser.CondicioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condicio)
        self._la = 0 # Token type
        try:
            localctx = pandaQParser.CondicioExprContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 80
                self.match(pandaQParser.T__12)


            self.state = 83
            self.camp()
            self.state = 84
            self.operadorBool()
            self.state = 85
            self.operacio(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperadorBoolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_operadorBool

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperadorBool" ):
                return visitor.visitOperadorBool(self)
            else:
                return visitor.visitChildren(self)




    def operadorBool(self):

        localctx = pandaQParser.OperadorBoolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operadorBool)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not(_la==14 or _la==15):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CampsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_camps

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ListCampsContext(CampsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CampsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def camp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.CampContext)
            else:
                return self.getTypedRuleContext(pandaQParser.CampContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListCamps" ):
                return visitor.visitListCamps(self)
            else:
                return visitor.visitChildren(self)


    class AllCampsContext(CampsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CampsContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllCamps" ):
                return visitor.visitAllCamps(self)
            else:
                return visitor.visitChildren(self)



    def camps(self):

        localctx = pandaQParser.CampsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_camps)
        self._la = 0 # Token type
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                localctx = pandaQParser.AllCampsContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(pandaQParser.T__15)
                pass
            elif token in [26]:
                localctx = pandaQParser.ListCampsContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.camp()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==4:
                    self.state = 91
                    self.match(pandaQParser.T__3)
                    self.state = 92
                    self.camp()
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CampContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_camp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CampCalculatMContext(CampContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CampContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ID)
            else:
                return self.getToken(pandaQParser.ID, i)
        def operacio(self):
            return self.getTypedRuleContext(pandaQParser.OperacioContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCampCalculatM" ):
                return visitor.visitCampCalculatM(self)
            else:
                return visitor.visitChildren(self)


    class CampCalculatSContext(CampContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CampContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ID)
            else:
                return self.getToken(pandaQParser.ID, i)
        def operacio(self):
            return self.getTypedRuleContext(pandaQParser.OperacioContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCampCalculatS" ):
                return visitor.visitCampCalculatS(self)
            else:
                return visitor.visitChildren(self)


    class CampNoCalculatContext(CampContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CampContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCampNoCalculat" ):
                return visitor.visitCampNoCalculat(self)
            else:
                return visitor.visitChildren(self)


    class CampCalculatRContext(CampContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CampContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ID)
            else:
                return self.getToken(pandaQParser.ID, i)
        def operacio(self):
            return self.getTypedRuleContext(pandaQParser.OperacioContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCampCalculatR" ):
                return visitor.visitCampCalculatR(self)
            else:
                return visitor.visitChildren(self)


    class CampCalculatPContext(CampContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CampContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ID)
            else:
                return self.getToken(pandaQParser.ID, i)
        def operacio(self):
            return self.getTypedRuleContext(pandaQParser.OperacioContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCampCalculatP" ):
                return visitor.visitCampCalculatP(self)
            else:
                return visitor.visitChildren(self)


    class CampCalculatDContext(CampContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.CampContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ID)
            else:
                return self.getToken(pandaQParser.ID, i)
        def operacio(self):
            return self.getTypedRuleContext(pandaQParser.OperacioContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCampCalculatD" ):
                return visitor.visitCampCalculatD(self)
            else:
                return visitor.visitChildren(self)



    def camp(self):

        localctx = pandaQParser.CampContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_camp)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = pandaQParser.CampCalculatSContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(pandaQParser.ID)
                self.state = 101
                self.match(pandaQParser.T__16)
                self.state = 102
                self.operacio(0)
                self.state = 103
                self.match(pandaQParser.T__17)
                self.state = 104
                self.match(pandaQParser.ID)
                pass

            elif la_ == 2:
                localctx = pandaQParser.CampCalculatRContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(pandaQParser.ID)
                self.state = 107
                self.match(pandaQParser.T__18)
                self.state = 108
                self.operacio(0)
                self.state = 109
                self.match(pandaQParser.T__17)
                self.state = 110
                self.match(pandaQParser.ID)
                pass

            elif la_ == 3:
                localctx = pandaQParser.CampCalculatMContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(pandaQParser.ID)
                self.state = 113
                self.match(pandaQParser.T__15)
                self.state = 114
                self.operacio(0)
                self.state = 115
                self.match(pandaQParser.T__17)
                self.state = 116
                self.match(pandaQParser.ID)
                pass

            elif la_ == 4:
                localctx = pandaQParser.CampCalculatDContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.match(pandaQParser.ID)
                self.state = 119
                self.match(pandaQParser.T__19)
                self.state = 120
                self.operacio(0)
                self.state = 121
                self.match(pandaQParser.T__17)
                self.state = 122
                self.match(pandaQParser.ID)
                pass

            elif la_ == 5:
                localctx = pandaQParser.CampCalculatPContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 124
                self.match(pandaQParser.ID)
                self.state = 125
                self.match(pandaQParser.T__20)
                self.state = 126
                self.operacio(0)
                self.state = 127
                self.match(pandaQParser.T__17)
                self.state = 128
                self.match(pandaQParser.ID)
                pass

            elif la_ == 6:
                localctx = pandaQParser.CampNoCalculatContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 130
                self.match(pandaQParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperacioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_operacio

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ParentesisContext(OperacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.OperacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operacio(self):
            return self.getTypedRuleContext(pandaQParser.OperacioContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParentesis" ):
                return visitor.visitParentesis(self)
            else:
                return visitor.visitChildren(self)


    class DivContext(OperacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.OperacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operacio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.OperacioContext)
            else:
                return self.getTypedRuleContext(pandaQParser.OperacioContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiv" ):
                return visitor.visitDiv(self)
            else:
                return visitor.visitChildren(self)


    class SumaContext(OperacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.OperacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operacio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.OperacioContext)
            else:
                return self.getTypedRuleContext(pandaQParser.OperacioContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSuma" ):
                return visitor.visitSuma(self)
            else:
                return visitor.visitChildren(self)


    class NumeroContext(OperacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.OperacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(pandaQParser.NUM, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumero" ):
                return visitor.visitNumero(self)
            else:
                return visitor.visitChildren(self)


    class PotContext(OperacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.OperacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operacio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.OperacioContext)
            else:
                return self.getTypedRuleContext(pandaQParser.OperacioContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPot" ):
                return visitor.visitPot(self)
            else:
                return visitor.visitChildren(self)


    class MulContext(OperacioContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.OperacioContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operacio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.OperacioContext)
            else:
                return self.getTypedRuleContext(pandaQParser.OperacioContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMul" ):
                return visitor.visitMul(self)
            else:
                return visitor.visitChildren(self)


    class RestaContext(OperacioContext):
